--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "bootstrap": "^5.3.3",
+    "bootstrap-icons": "^1.11.3",
+    "element-plus": "^2.8.8",
     "pinia": "^2.2.6",
     "vue": "^3.5.12"
   },
