--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
     "element-plus": "^2.8.8",
+    "gsap": "^3.12.5",
     "ol": "^10.3.1",
     "ol-contextmenu": "^5.5.0",
     "ol-ext": "^4.0.24",
